--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "grunt-cdnify",
-  "description": "Add CDN hosts to all your static assets",
+  "name": "grunt-cdner",
+  "description": "Add CDN hosts to all your static assets. Supports relative path in CSS files",
   "version": "0.1.0",
-  "homepage": "https://github.com/gillesruppert/grunt-cdnify",
+  "homepage": "https://github.com/gillesruppert/grunt-cdner",
   "author": {
     "name": "Gilles Ruppert",
     "email": "gilles@madeofbytes.com",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/gillesruppert/grunt-cdnify.git"
+    "url": "git://github.com/gillesruppert/grunt-cdner.git"
   },
   "bugs": {
-    "url": "https://github.com/gillesruppert/grunt-cdnify/issues"
+    "url": "https://github.com/gillesruppert/grunt-cdner/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/gillesruppert/grunt-cdnify/blob/master/LICENSE-MIT"
+      "url": "https://github.com/gillesruppert/grunt-cdner/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
